2022-05-04  alco
	
	v0.6.0
	
	* NEW LAYOUT: 24 bytes type with size_t capacity

	* micro bench

2022-04-20  alco
	
	v0.5.2
	
	* buffet_free: only return false on a valid owner with live views

	* validate Store on every access

2022-04-20  alco
	
	v0.5.1
	
	* buffet_clone

	* buffet_append: solving self-append 
	(as pointed by Justas Masiulis, if source is Buffet itself and relocates, 
	we copy from invalid memory)

	* bench: fast append_cpp
	
	* OVERALLOC int